--- a/src/main/resources/templates/layouts/editview/editCompany.html
+++ b/src/main/resources/templates/layouts/editview/editCompany.html
@@ -411,7 +411,7 @@
 													<!-- ADD -->
 
 													<div class="box-footer">
-														<button type="submit" class="btn btn-primary" id="submit">Submit</button>
+														<button type="submit" class="btn btn-primary" id="submit">Apply Changes </button>
 
 													<input type="button" value="Go back!"
 															class="btn btn-danger" onclick="history.back()">
