--- a/src/main/resources/templates/layouts/editview/editPurchaseOrder.html
+++ b/src/main/resources/templates/layouts/editview/editPurchaseOrder.html
@@ -645,8 +645,9 @@
 												<!--end final div-->
 
 												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="submit" value="Apply Changes " class="btn btn-primary" />
+														<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 												</div>
 											</form>
 
