--- a/src/main/resources/templates/layouts/editview/editQuotationDetail.html
+++ b/src/main/resources/templates/layouts/editview/editQuotationDetail.html
@@ -579,7 +579,9 @@
 											</div>
 
 											<div class="box-footer">
-												<button type="submit" class="btn btn-primary">Submit</button>
+												<button type="submit" class="btn btn-primary">Apply Changes </button>
+													<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 											</div>
 								</form>
 
