--- a/src/main/resources/templates/layouts/Master/serviceCategory.html
+++ b/src/main/resources/templates/layouts/Master/serviceCategory.html
@@ -102,13 +102,15 @@
 															th:field="*{description}" title="This field is required"
 															required>
 													</div>
-
+<!-- 
 													<div class="form-group col-md-6">
 														<label>Account Code</label> <input type="text"
 															class="form-control" placeholder="Account Code"
 															title="account code" th:field="*{accountCode}">
-													</div>
-													<div class="form-group col-md-6">
+													</div> -->
+													
+													
+													<div class="form-group col-md-12">
 														<label class="form-label">Category Type</label> <label
 															style="color: red">*</label> <select class="form-control"
 															id="" title="This field is required" th:field="*{categoryType}" required>
