--- a/src/main/resources/templates/layouts/editview/editGateEntry.html
+++ b/src/main/resources/templates/layouts/editview/editGateEntry.html
@@ -380,7 +380,7 @@
 
 
 												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="submit" value="Apply Changes " class="btn btn-primary" />
 													<input type="reset" value="Reset" class="btn btn-danger" />
 												</div>
 											</form>
