--- a/src/main/resources/templates/layouts/editview/editItem.html
+++ b/src/main/resources/templates/layouts/editview/editItem.html
@@ -575,7 +575,7 @@
 													</div>
 
 													<div class="box-footer">
-														<button type="submit" class="btn btn-primary">Submit</button>
+														<button type="submit" class="btn btn-primary">Apply Changes </button>
 														<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
 													</div>
 												</div>
