--- a/src/main/resources/templates/layouts/editview/editMrnInspection.html
+++ b/src/main/resources/templates/layouts/editview/editMrnInspection.html
@@ -452,7 +452,7 @@ iframe {
 
 
 												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="submit" value="Apply Changes " class="btn btn-primary" />
 													<input type="button" value="Go back!"
 														class="btn btn-danger" onclick="history.back()">
 												</div>
