--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -1,117 +1,73 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>AdminLTE 2 | General Form Elements</title>
-
+<title>EBS</title>
 <meta
 	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
 	name="viewport">
-
-<link rel="stylesheet" href="css/bootstrap.min.css">
-
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
 <link rel="stylesheet"
 	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
-<link rel="stylesheet" href="css/AdminLTE.min.css">
-
-<link rel="stylesheet" href="css/skins/_all-skins.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini"> 
-
-	<div th:replace="fragments/header :: header">...</div>
-	<div th:replace="fragments/sidebar :: sidebar">...</div>
-
+<body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
 
 
-		<div class="content-wrapper">
-			<!-- Content Header (Page header) -->
-			<section class="content-header">
-				<h1>
-					Blank page <small>it all starts here</small>
-				</h1>
-				<ol class="breadcrumb">
-					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
-					<li><a href="#">Examples</a></li>
-					<li class="active">Blank page</li>
-				</ol>
-			</section>
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
 
-			<!-- Main content -->
-			<section class="content">
 
-				<!-- Default box -->
-				
-				<!-- <div class="box">
-					<div class="box-header with-border">
-						<h3 class="box-title">Title</h3>
-						<div class="box-tools pull-right">
-							<button class="btn btn-box-tool" data-widget="collapse"
-								data-toggle="tooltip" title="Collapse">
-								<i class="fa fa-minus"></i>
-							</button>
-							<button class="btn btn-box-tool" data-widget="remove"
-								data-toggle="tooltip" title="Remove">
-								<i class="fa fa-times"></i>
-							</button>
+
+							<div class="col-md-12" style="margin-top: 20px;" th:style="'background: url(/img/theme/bck-theme-1.jpg) no-repeat center center fixed;'">
+
+								<div class="box box-primary"  th:style="'background: url(/img/theme/bck-theme-1.jpg) no-repeat center center fixed;'">
+									<!-- <img th:src="@{/css/img/theme/pixel.jpg}"  alt="alt" class="img-fluid"  style="height: 100%"/> -->
+								</div>
+							</div>
+
+
+
 						</div>
-					</div> 
 
-
-					<div class="box-body">
-						<!-- Start creating your amazing application! -->
-
-
-
-
-						<!-- <div class="box-footer">Footer</div> -->
-						<!-- /.box-footer-->
-					<!-- </div> -->
-					<!-- /.box -->
-
-			<!-- 	</div> -->
-
-			</section>
-			<!-- /.content -->
+					</div>
+				</section>
+			</div>
 		</div>
-
 	</div>
-
-	<!-- <div th:replace="fragments/footer :: footer">...</div> -->
+	<div th:replace="fragments/footer :: footer">...</div>
 	<!--   <section class="content">
         
         </section>-->
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-	<script src="js/jQuery-2.1.4.min.js"></script>
-
-	<script src="js/bootstrap.min.js"></script>
-
-	<script src="js/fastclick.min.js"></script>
-
-	<script src="js/app.min.js"></script>
-
-	<script src="/js/demo.js"></script>
 </body>
 
 </html>
