--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -196,7 +196,7 @@
 
 														<div class="form-group col-md-3">
 															<label class="form-label">GST</label> <select
-																class="form-control" title="gst" th:field="*{cgst}">
+																class="form-control" title="gst" th:field="*{excisable}">
 																<option value="">Select</option>
 																<option value="G">GST</option>
 																<option value="N">NON-GST</option>
@@ -241,18 +241,23 @@
 
 
 														<div class="form-group" style="margin-left: 14px;">
+															
 															<input class="form-check-input p-10" type="checkbox"
-																value="option1"> <label class="form-check-label"
-																for="inlineCheckbox1" th:field="*{bulkIssYn}">Bulk
-																Issueable</label> <input class="form-check-input"
-																type="checkbox" value="option2"
+																value="Y" name="bulkIssYn" th:checked="*{bulkIssYn}"> <label class="form-check-label"
+																for="inlineCheckbox1" >Bulk
+																Issueable</label> 
+																
+																<input class="form-check-input"
+																type="checkbox" value="Y" name="pettyItem" th:checked="*{pettyItem}"
 																style="margin-left: 8px;"> <label
-																class="form-check-label" for="inlineCheckbox2"
-																th:field="*{pettyItem}">Petty Item</label> <input
-																class="form-check-input" type="checkbox" value="option3"
-																style="margin-left: 8px;"> <label
+																class="form-check-label" for="inlineCheckbox2">Petty Item</label> 
+																
+																<input
+																class="form-check-input" type="checkbox" value="Y"
+																style="margin-left: 8px;" name="warItemYn" th:checked="*{warItemYn}"> <label
 																class="form-check-label" for="inlineCheckbox3">Warranty
 																Item</label>
+																
 														</div>
 
 
@@ -342,7 +347,7 @@
 
 													<p></p>
 													<p></p>
-
+<!-- 
 													<div class="box">
 
 														<h5>Account Information</h5>
@@ -359,19 +364,19 @@
 																		title="account name">
 																		<option value="A">Active</option>
 																	
-																		<!-- <option th:each="department :  ${departmentList}"
+																		<option th:each="department :  ${departmentList}"
 												th:text="${department.deptName}"
-												th:value=" ${department.departmentCode}"></option> -->
+												th:value=" ${department.departmentCode}"></option>
 																	</select>
 																</div>
 															</div>
 														</div>
-													</div>
+													</div> -->
 
 													<p></p>
 													<p></p>
 
-													<div class="box">
+											<!-- 		<div class="box">
 
 														<h5>Product Information</h5>
 														<div class="row">
@@ -388,9 +393,9 @@
 																		<option value="">Select</option>
 																		<option value="1">P-1</option>
 																		<option value="2">P-2</option>
-																		<!-- <option th:each="department :  ${departmentList}"
+																		<option th:each="department :  ${departmentList}"
 												th:text="${department.deptName}"
-												th:value=" ${department.departmentCode}"></option> -->
+												th:value=" ${department.departmentCode}"></option>
 																	</select>
 																</div>
 																<div class="form-group col-md-2">
@@ -406,16 +411,16 @@
 																		<option value="">Select</option>
 																		<option value="1">P-1</option>
 																		<option value="2">P-2</option>
-																		<!-- <option th:each="department :  ${departmentList}"
+																		<option th:each="department :  ${departmentList}"
 												th:text="${department.deptName}"
-												th:value=" ${department.departmentCode}"></option> -->
+												th:value=" ${department.departmentCode}"></option>
 																	</select>
 																</div>
 															</div>
 
 														</div>
 													</div>
-
+ -->
 												</div>
 												<!--end item detal -->
 
@@ -541,7 +546,7 @@
 
 
 																			<select class="form-control" title="uom Name"
-																				 th:field="*{uom}" style="width: 180px;">
+																				th:field="*{packingDetails[0].unitName}"  style="width: 180px;">
 																				<option value="">Select</option>
 																				<option th:each="uom :  ${listUom}"
 																					th:text="${uom.unit}" th:value=" ${uom.uomCode}">
