--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -205,8 +205,8 @@
 														</div>
 
 														<div class="form-group col-md-3">
-															<label class="form-label">DOL</label> <select
-																class="form-control" title="dol" th:field="*{dol}">
+															<label class="form-label">Inspection Required</label><span style="color:red">*</span> <select
+																class="form-control" title="dol" th:field="*{dol}" required>
 																<option value="">Select</option>
 																<option value="Y">Yes</option>
 																<option value="N">No</option>
