--- a/src/main/resources/templates/layouts/Master/mrn.html
+++ b/src/main/resources/templates/layouts/Master/mrn.html
@@ -109,7 +109,7 @@ iframe {
 														<div class="form-group col-md-3">
 															<label for="inputEmail4">MRN No</label> <input
 																type="text" class="form-control" id="inputEmail4"
-																placeholder="Gate Sr No" th:field="*{mrnNo}" readonly>
+																placeholder="Mrn No" th:field="*{mrnNo}" readonly>
 														</div>
 														<div class="form-group col-md-3">
 															<label for="inputPassword4">MRN Date</label> <input
@@ -302,7 +302,7 @@ iframe {
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Item Name</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">Account Name</th>
+																			style="width: 90px;">Store</th>
 																		<th scope="col" class="text-center"
 																			style="width: 10px;">UOM</th>
 																		<th scope="col" class="text-center"
@@ -335,7 +335,7 @@ iframe {
 																			style="width: 120px;">Remarks</th>
 
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">DOL</th>
+																			style="width: 120px;">Inspection Required</th>
 
 
 
@@ -376,10 +376,11 @@ iframe {
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
-																			name="mrnDetails[0].itemAccCode" title="account name">
+																			name="mrnDetails[0].store" title="account name">
 																				<option value="">Select</option>
-																				<option value="1">Ac01</option>
-																				<option value="2">Ac02</option>
+																				<option th:each="store :  ${storeList}"
+																					th:text="${store.description}"
+																					th:value=" ${store.storeCode}"></option>
 
 
 																		</select></td>
@@ -425,37 +426,38 @@ iframe {
 																		<!-- total cost   -->
 																		<td><input type="number"
 																			class="form-control form-control-sm" id="totalCost0"
-																			step="0.25" value="0.00"
-																			title="total cost" name="mrnDetails[0].totalvalue"></td>
+																			step="0.25" value="0.00" title="total cost"
+																			name="mrnDetails[0].totalvalue"></td>
 
 																		<!-- net cost  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm" id="netCost0"
 																			title="net cost" name="mrnDetails[0].itemNetVal"
-																			step="0.25" value="0.00"
-																			readonly></td>
+																			step="0.25" value="0.00" readonly></td>
 
 
 																		<!-- total pur cost  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="totalPrCost0" title="total pur cost"
-																			name="mrnDetails[0].totalPurCost"step="0.25" value="0.00" readonly></td>
+																			name="mrnDetails[0].totalPurCost" step="0.25"
+																			value="0.00" readonly></td>
 
 																		<!-- total inr cost  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="totalInrCost0" title="total inr cost" step="0.25" value="0.00"readonly></td>
+																			id="totalInrCost0" title="total inr cost" step="0.25"
+																			value="0.00" readonly></td>
 
 																		<!-- remarks   -->
 																		<td><input type="text"
 																			class="form-control form-control-sm" id="remarks0"
 																			title="remarks" name="mrnDetails[0].remarks"></td>
-  
+
 																		<!-- dol -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
-																			id="orderIndentNumberPo" title="dol">
+																			id="dol0" name="mrnDetails[0].dolStatus" title="dol" readonly>
 																				<option value="">Select</option>
 																				<option value="Y">YES</option>
 																				<option value="N">NO</option>
@@ -542,15 +544,13 @@ iframe {
 																		<!-- freight  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm" id="freight0"
-																			title="order date"
-																			name="mrnDetails[0].freight"
+																			title="order date" name="mrnDetails[0].freight"
 																			style="text-align: right" value="0"></td>
 
 																		<!-- cgst in percent  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm" id="cgstInPer0"
-																			title="item name"
-																			name="mrnDetails[0].cgst"
+																			title="item name" name="mrnDetails[0].cgst"
 																			onkeyup="calulationOfCgst()"
 																			style="text-align: right" value="0"></td>
 
@@ -805,6 +805,9 @@ iframe {
 
 					$("#billRate" + idIndex).val(data.itemRate);
 
+					console.log(" dolvalue is :  " + data.dol)
+					$("#dol" + idIndex).val(data.dol);
+
 					totalCostFun()
 
 				},
@@ -946,7 +949,7 @@ iframe {
 
 																		/*  dol */
 
-																		+ "<td><select class='form-control indentContainer form-control-sm select' id='dol'"+j+" title='dol'><option value=''>Select</option><option value='y'>YES</option><option value='n'>NO</option></select></td>"
+																		+ "<td><select class='form-control indentContainer form-control-sm select' id='dol"+j+" '  name='mrnDetails["+j+"].dolStatus'  title='dol' readonly><option value=''>Select</option><option value='Y'>YES</option><option value='N'>NO</option></select></td>"
 
 														);
 												$('#example').append(
@@ -1099,8 +1102,6 @@ iframe {
 					result).toFixed(2);
 
 		}
-		
-		
 	</script>
 
 
