code commit@Rahul
updation code has been done for StoreWiseStock and Fiforate Item

--- a/src/main/resources/templates/layouts/Master/mrn.html
+++ b/src/main/resources/templates/layouts/Master/mrn.html
@@ -447,7 +447,7 @@ iframe {
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="totalInrCost0" title="total inr cost" step="0.25"
-																			value="0.00" readonly></td>
+																			value="0.00" name="mrnDetail[0].poNetVal"  readonly></td>
 
 																		<!-- remarks   -->
 																		<td><input type="text"
