--- a/src/main/resources/templates/layouts/Master/mrnInspection.html
+++ b/src/main/resources/templates/layouts/Master/mrnInspection.html
@@ -142,7 +142,7 @@ iframe {
 																<option value="">Select</option>
 
 																<option th:each="mrm :  ${mrmList}"
-																	th:text="${mrm.mrnNo}" th:value=" ${mrm.mrnNo}"></option>
+																	th:text="${mrm.mrn.mrnNo}" th:value=" ${mrm.mrn.mrnNo}"></option>
 
 															</select>
 														</div>
