code commit@Rahul
updation has been done while mrn inspection

--- a/src/main/resources/templates/layouts/Master/mrnInspection.html
+++ b/src/main/resources/templates/layouts/Master/mrnInspection.html
@@ -317,10 +317,11 @@ iframe {
 																		<!-- item code -->
 																		<td><input type="text"
 																			class="form-control form-control-sm" id="itemCode0"
-																			title="order date" name="mrnDetails[0].item" readonly></td>
+																			title="order date" readonly></td>
 
 																		<!-- item name -->
-																		<td><select type="text"
+																		<td><select 
+																			name="mrnInspectionItems[0].item" 
 																			class="form-control  form-control-sm select itemContainer0"
 																			id="item0" title="item name" onchange="getItemInfo()"></select></td>
 
