--- a/src/main/resources/templates/layouts/editview/editGateEntry.html
+++ b/src/main/resources/templates/layouts/editview/editGateEntry.html
@@ -136,15 +136,11 @@
 															</select>
 														</div>
 
-
-
-
-
 														<div class="form-group col-md-4">
-															<label class="form-label">Supplier Code</label> <label
+															<label class="form-label">Supplier Name</label> <label
 																style="color: red">*</label> <select
-																class="form-control" id="" title="supplier code"
-																th:field="*{partyMaster}">
+																class="form-control" id="supplierName"
+																title="supplier code" th:field="*{partyMaster}">
 																<option value="">Select</option>
 																<option th:each="party :  ${partyMasterList}"
 																	th:text="${party.partyName}"
@@ -153,14 +149,6 @@
 
 															</select>
 														</div>
-
-
-														<div class="form-group col-md-4">
-															<label for="inputPassword4">Supplier Name</label> <input
-																type="text" class="form-control"
-																placeholder="Supplier Name" title="supplier name">
-														</div>
-
 
 
 													</div>
@@ -189,7 +177,7 @@
 
 
 
-														<div class="form-group col-md-4">
+														<!-- <div class="form-group col-md-4">
 															<label for="inputAddress">Transporter Code</label><label
 																style="color: red">*</label> <select
 																class="form-control" id="" title="entry type"
@@ -197,7 +185,8 @@
 
 
 															</select>
-														</div>
+														</div> -->
+
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Transporter Name</label> <input
 																type="text" class="form-control"
@@ -306,22 +295,28 @@
 																			id="orderIndentDatePo0" title="order date"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].orderDate}"></td>
 
-																		<!-- item code  -->
+																		<!-- item Code  -->
+
+																		<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="orderItemCode0" title="item description"
+																			th:field="*{gateEntryItemDetails[__${stat.index}__].item}"></td>
+
+
+
+																		<!-- item description  -->
 
 																		<td><select id="orderItemPo"
 																			class="form-control form-control-sm select orderItemContainerPo"
 																			required title="item"
 																			onchange="getOrderItemDetailForPo()"
-																			th:field="*{gateEntryItemDetails[__${stat.index}__].itemCode.item}">
+																			th:field="*{gateEntryItemDetails[__${stat.index}__].item}">
 																				<option value="">Select</option>
+																				<option th:each="item :  ${itemList}"
+																					th:text="${item.description}"
+																					th:value=" ${item.itemCode}"></option>
+
 																		</select></td>
-
-																		<!-- item description  -->
-
-																		<td><input type="text"
-																			class="form-control form-control-sm"
-																			id="orderItemCode0" title="item description"
-																			th:field="*{gateEntryItemDetails[__${stat.index}__].itemDescription}"></td>
 
 																		<!-- pending qty  -->
 
@@ -345,12 +340,14 @@
 																		<!-- incoming part sr no  -->
 
 																		<td><input type="text"
+																			th:field="*{gateEntryItemDetails[__${stat.index}__].incomingSrNo}"
 																			class="form-control form-control-sm" id="" title=""></td>
 
 
 																		<!-- claim part   -->
 
 																		<td><input type="text"
+																			th:field="*{gateEntryItemDetails[__${stat.index}__].claimSrNo}"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title=""></td>
 
@@ -380,19 +377,20 @@
 
 
 												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes " class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="submit" value="Apply Changes "
+														class="btn btn-primary" /> <input type="reset"
+														value="Reset" class="btn btn-danger" />
 												</div>
 											</form>
 
 
 										</div>
 										<!-- /.box -->
-										<div
+										<!-- <div
 											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/gateentry/list}">View All Gate-Entry</a>
 										</div>
-									</div>
+ -->									</div>
 
 
 
@@ -411,6 +409,48 @@
 
 
 	<script>
+		function getOrderItemList() {
+
+			//Get Item lIst in purchase order item detail using po number (FK)
+
+			var poNumber = document.getElementById("").value;
+			console.log("get Item List Function is : " + poNumber)
+
+			$
+					.ajax({
+						type : "GET",
+						url : "itemList/" + poNumber,
+
+						success : function(data) {
+							console.log("Item Info behalf of Indent Number  : "
+									+ data)
+
+							var options = '<option value=""><strong>Select Item</strong></option>';
+							$(data)
+									.each(
+											function(index, value) {
+
+												console.log("item info : "
+														+ value.item.itemCode)
+												console
+														.log("item info : "
+																+ value.item.description)
+
+												options += '<option value="' + value.item.itemCode + '">'
+														+ value.item.description
+														+ '</option>';
+
+											});
+
+							$('.orderItemContainerPo' + idIndex).html(options);
+
+						},
+						error : function() {
+							console.log("Error");
+						}
+					});
+		}
+
 		$(document).ready(function() {
 
 			document.getElementById('gateEntryDate').valueAsDate = new Date();
